--- a/ClockAngleCalculatorTests/ClockAngleCalculatorTests.csproj
+++ b/ClockAngleCalculatorTests/ClockAngleCalculatorTests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ClockAngleCalculator\ClockAngleCalculator.csproj" />
     <ProjectReference Include="..\clockAngle\ClockAngleCalculator.csproj" />
   </ItemGroup>
 
